--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" href="./images/icon-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
-    
+    <link rel="manifest" href="./manifest.json" />
     <title>Kleinteilig</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
